# shadowsocks-rust

./: .gitmodules  Cargo.toml
crates/shadowsocks/: Cargo.toml
crates/shadowsocks-service/: Cargo.toml
crates/shadowsocks-service/src/: config.rs  env_crypt.rs  lib.rs
crates/shadowsocks-service/src/acl/: mod.rs
crates/shadowsocks-service/src/dns/: mod.rs
crates/shadowsocks-service/src/local/: context.rs  mod.rs  start_stat.rs  utils.rs
crates/shadowsocks-service/src/local/android/: env.rs  mod.rs  sha1.rs  signed_data.rs  validate.rs
crates/shadowsocks-service/src/local/api/: mod.rs
crates/shadowsocks-service/src/local/context/: fake_mode.rs
crates/shadowsocks-service/src/local/dns/: client_cache.rs  dns_resolver.rs  mod.rs  server.rs  upstream.rs
crates/shadowsocks-service/src/local/fake_dns/: manager.rs  processor.rs  tcp_server.rs  udp_server.rs
crates/shadowsocks-service/src/local/http/: connector.rs  dispatcher.rs  http_client.rs  http_service.rs  http_stream.rs  mod.rs  server.rs  tokio_rt.rs  utils.rs
crates/shadowsocks-service/src/local/loadbalancing/: ping_balancer.rs  server_data.rs
crates/shadowsocks-service/src/local/maintain/: context.rs  mod.rs  server.rs
crates/shadowsocks-service/src/local/net/: mod.rs
crates/shadowsocks-service/src/local/online_config/: mod.rs
crates/shadowsocks-service/src/local/redir/: server.rs
crates/shadowsocks-service/src/local/reporter/: mod.rs
crates/shadowsocks-service/src/local/socks/: config.rs
crates/shadowsocks-service/src/local/tun/: dns.rs  mod.rs  tcp.rs  udp.rs  virt_device.rs
crates/shadowsocks-service/src/local/tunnel/: server.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks-service/src/local/wg/: mod.rs
crates/shadowsocks-service/src/manager/: mod.rs  server.rs
crates/shadowsocks-service/src/net/: launch_activate_socket.rs  mod.rs  mon_socket.rs  mon_stream.rs  rate_limited_stream.rs
crates/shadowsocks-service/src/server/: connection.rs  context.rs  dns.rs  maintain.rs  manager.rs  mod.rs  policy.rs  server.rs  tcprelay.rs  udprelay.rs
crates/shadowsocks-service/src/server/maintain/: context.rs  data.rs  mod.rs  server.rs
crates/shadowsocks-service/src/server/tcprelay/: .#tcprelay.rs  trojan.rs  tuic.rs  vless.rs
crates/shadowsocks-service/src/server/udprelay/: trojan.rs  tuic.rs  vless.rs
crates/shadowsocks-service/src/sniffer/: bittorrent.rs  chain.rs  mod.rs  stream.rs  tls.rs  utp.rs
crates/shadowsocks-service/src/sys/: mod.rs
crates/shadowsocks-service/src/sys/unix/: macos.rs
crates/shadowsocks/src/: canceler.rs  config.rs  context.rs  lib.rs  policy.rs  read_line.rs  rustls_util.rs  timeout.rs
crates/shadowsocks/src/config/: protocol.rs  shadowsocks.rs  transport.rs  trojan.rs  tuic.rs  vless.rs  wg.rs
crates/shadowsocks/src/config/test/: url.rs
crates/shadowsocks/src/config/transport/: tests.rs
crates/shadowsocks/src/dns_resolver/: hickory_dns_resolver.rs  mod.rs  resolver.rs  trust_dns_resolver.rs
crates/shadowsocks/src/manager/: client.rs  datagram.rs  listener.rs
crates/shadowsocks/src/net/: addr_category.rs  addr_type.rs  destination.rs  fd_info.rs  flow.rs  mod.rs  option.rs  tcp.rs  udp.rs  util.rs
crates/shadowsocks/src/net/sys/: mod.rs
crates/shadowsocks/src/plugin/: mod.rs  ss_plugin.rs
crates/shadowsocks/src/relay/: socks5.rs
crates/shadowsocks/src/relay/tcprelay/: aead.rs  aead_2022.rs  copy_bidirectional.rs  crypto_io.rs  mod.rs  proxy_listener.rs  stream.rs  utils.rs  utils_copy.rs
crates/shadowsocks/src/relay/udprelay/: aead.rs  aead_2022.rs  crypto_io.rs  proxy_socket.rs  stream.rs
crates/shadowsocks/src/security/replay/: ppbloom.rs
crates/shadowsocks/src/sniffer/: bittorrent.rs  chain.rs  mod.rs  stream.rs
crates/shadowsocks/src/ssl/: cipher_suite.rs  client.rs  mod.rs  server.rs
crates/shadowsocks/src/statistics/: bu_context.rs  conn_guard.rs  in_conn_guard.rs  mod.rs  mon_traffic.rs
crates/shadowsocks/src/test/: mod.rs  transfer.rs
crates/shadowsocks/src/transport/: device.rs  dummy_packet.rs  mod.rs  mon_traffic.rs  mut_packet.rs
crates/shadowsocks/src/transport/common/: crypt.rs  cryptreal.rs  header.rs  mod.rs  xor.rs
crates/shadowsocks/src/transport/direct/: acceptor.rs  connector.rs  mod.rs  packet.rs
crates/shadowsocks/src/transport/mkcp/: acceptor.rs  config.rs  connection.rs  connector.rs  crypt.rs  cryptreal.rs  header.rs  io.rs  mod.rs  receiving.rs  segment.rs  sending.rs  statistic.rs  utils.rs
crates/shadowsocks/src/transport/rate_limit/: bound_width.rs  mod.rs  stream.rs
crates/shadowsocks/src/transport/restls/: acceptor.rs  client_hello.rs  config.rs  mod.rs  restls.rs  server_hello.rs  stream.rs  utils.rs
crates/shadowsocks/src/transport/skcp/: config.rs  connector.rs  io.rs  listener.rs  mod.rs  session.rs  skcp.rs  stream.rs
crates/shadowsocks/src/transport/tls/: acceptor.rs  connector.rs  mod.rs
crates/shadowsocks/src/transport/websocket/: acceptor.rs  config.rs  connector.rs  mod.rs  parsed_http_data.rs  stream.rs
crates/shadowsocks/src/trojan/: client_stream.rs  config.rs  mod.rs  packet.rs  protocol.rs
crates/shadowsocks/src/trojan/client/: delay_connect_stream.rs  mod.rs  stream.rs
crates/shadowsocks/src/trojan/server/: mod.rs  stream.rs  udp.rs
crates/shadowsocks/src/tuic/: mod.rs
crates/shadowsocks/src/tuic/client/: certificate.rs  config.rs  dispatcher.rs  mod.rs
crates/shadowsocks/src/tuic/protocol/: mod.rs
crates/shadowsocks/src/tuic/server/: config.rs  mod.rs  server.rs  svr.rs
crates/shadowsocks/src/vless/: client_packet.rs  client_stream.rs  encoding.rs  inbound.rs  mod.rs  packet.rs  protocol.rs  test_env.rs  uuid.rs  validator.rs
crates/shadowsocks/src/vless/common/: mod.rs  uuid.rs
crates/shadowsocks/src/vless/mux/: client.rs  encoding.rs  frame.rs  mod.rs  server.rs  session.rs  shared_stream.rs  stream.rs
crates/shadowsocks/src/vless/protocol/: account.rs  addons.rs  config.rs  headers.rs  mod.rs  user.rs
crates/shadowsocks/src/wg/: config.rs  mod.rs  serialization.rs
crates/shadowsocks/tests/: tcp.rs  tcp_tfo.rs  udp.rs
src/: config.rs  (+4 more)
(+168 files in other folders)
